add table of contents

--- a/DetectAlzFromSpeechGBA_runable.ipynb
+++ b/DetectAlzFromSpeechGBA_runable.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V28",
-      "authorship_tag": "ABX9TyMU7uRi51DYjFw7/SW/7m3x",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPXrUZdO6WQ5fRvOXw9nMH1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
@@ -27,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/fjadidi2001/AD_Prediction/blob/main/DetectAlzFromSpeechGBA_runable.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1- paths"
+      ],
+      "metadata": {
+        "id": "SJAKHEKhjm1R"
+      }
     },
     {
       "cell_type": "code",
@@ -955,6 +963,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 2- extract label"
+      ],
+      "metadata": {
+        "id": "DXO3rUAgjpsn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -1360,6 +1377,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3- Model- classification AD-CN"
+      ],
+      "metadata": {
+        "id": "8PdZYr4uj9Lc"
+      }
     },
     {
       "cell_type": "code",
@@ -1951,15 +1977,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xw_qUfDxI9u2",
-        "outputId": "feb89ff6-baed-40db-c24e-e8d927cd951a"
+        "outputId": "01cf1057-c8e8-496f-b1fb-16f422cc7132"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Device: cuda\n",
+            "Device: cpu\n",
             "Processing diagnosis task...\n",
             "Extracting BERT features for diagnosis...\n",
             "Engineering features for diagnosis...\n",
@@ -1986,6 +2012,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HYpl5vGOjW3W"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
